feat(86): padroniza endpoints